docs/api/qiskit/0.19/qiskit.aqua.circuits.ESOP.mdx
---
title: ESOP (v0.19)
description: API reference for qiskit.aqua.circuits.ESOP in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.circuits.ESOP
---

# ESOP

<Class id="qiskit.aqua.circuits.ESOP" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/circuits/boolean_logical_circuits.py" signature="ESOP(ast, num_vars=None)" modifiers="class">
  Class for constructing circuits for Exclusive Sum of Products

  Constructor.

  **Parameters**

  *   **ast** (*tuple*) – The logic expression as an Abstract Syntax Tree (AST) tuple
  *   **num\_vars** (*int*) – Number of boolean variables

  **Raises**

  [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – invalid input

  ## Attributes

  <span id="esop-ancillary-register" />

  ### ancillary\_register

  <Attribute id="qiskit.aqua.circuits.ESOP.ancillary_register">
    returns ancillary register
  </Attribute>

  <span id="esop-clause-register" />

  ### clause\_register

  <Attribute id="qiskit.aqua.circuits.ESOP.clause_register">
    returns clause register
  </Attribute>

  <span id="esop-num-clauses" />

  ### num\_clauses

  <Attribute id="qiskit.aqua.circuits.ESOP.num_clauses">
    returns num clauses
  </Attribute>

  <span id="esop-num-variables" />

  ### num\_variables

  <Attribute id="qiskit.aqua.circuits.ESOP.num_variables">
    return num variables
  </Attribute>

  <span id="esop-output-register" />

  ### output\_register

  <Attribute id="qiskit.aqua.circuits.ESOP.output_register">
    returns output register
  </Attribute>

  <span id="esop-variable-register" />

  ### variable\_register

  <Attribute id="qiskit.aqua.circuits.ESOP.variable_register">
    returns variable register
  </Attribute>

  ## Methods

  <span id="esop-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.aqua.circuits.ESOP.construct_circuit" signature="ESOP.construct_circuit(circuit=None, variable_register=None, output_register=None, output_idx=None, ancillary_register=None, mct_mode='basic')">
    Construct circuit.

    **Parameters**

    *   **circuit** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – The optional circuit to extend from
    *   **variable\_register** ([*QuantumRegister*](qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")) – The optional quantum
    *   **variables** (*register to use for problem*) –
    *   **output\_register** ([*QuantumRegister*](qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")) – The optional quantum
    *   **output** (*register to use for holding the*) –
    *   **output\_idx** (*int*) – The index of the output register to write to
    *   **ancillary\_register** ([*QuantumRegister*](qiskit.circuit.QuantumRegister "qiskit.circuit.QuantumRegister")) – The optional quantum register to use as ancilla
    *   **mct\_mode** (*str*) – The mode to use for building Multiple-Control Toffoli

    **Returns**

    quantum circuit.

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – invalid input
  </Function>
</Class>

